# bookshop

./: .gitignore  LICENSE  Makefile.am  README.md  configuration.cpp  configuration.h  configure.ac  global.ecpp  webmain.ecpp
controller/: cart.ecpp  order.ecpp  products.ecpp
db/: bookshop.sql  data.sql
manager/: bookmanager.cpp  bookmanager.h  ordermanager.cpp
model/: book.h  order.ecpp  products.ecpp  shoppingcart.cpp  shoppingcart.h
resources/: tntnet.css
src/: Makefile.am  bookshop.conf  configuration.cpp  configuration.h  index.ecpp  main.cpp  webmain.ecpp
src/controller/: cart.cpp  order.cpp  products.cpp  products.ecpp
src/manager/: bookmanager.cpp  ordermanager.h
src/model/: book.h  orderdata.h
src/view/: cart.ecpp  order.ecpp  products.ecpp
view/: cart.ecpp  products.ecpp
